<?xml version="1.0"?>
<package format="2">
  <name>jetauto_bringup</name>
  <version>0.0.0</version>
  <description>The jetauto_bringup package</description>

  <maintainer email="jetauto@todo.todo">jetauto</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>jetauto_app</depend>
  <depend>jetauto_controller</depend>
  <depend>astra_camera</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
